<resources>
    <string name="app_name">BICA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login_Activity_Welcome_text">안녕하세요,\nBICA 입니다.\n로그인을 해주세요 :)</string>
    <string name="Initial_login">Login</string>
    <string name="Initial_signup">Sign Up</string>
    <string name="Find_ID">Find Id</string>
    <string name="Found_ID">아이디 찾기 결과</string>
    <string name="ID">가입된 이메일 주소</string>
    <string name="Move_Login">로그인하기</string>
    <string name="Find_PW">Find PW</string>
    <string name="Guide_name">이름을 입력해주세요</string>
    <string name="Guide_phonenum">전화번호를 입력해주세요</string>
    <string name="Guide_Email">이메일을 입력해주세요</string>
    <string name="Check">확인</string>
    <string name="Register_Activity_Welcome_text">회원가입을 하는 곳이에요!</string>
    <string name="User_Name">Name</string>
    <string name="User_Email">Email</string>
    <string name="Certified">인증</string>
    <string name="User_PW">Password</string>
    <string name="User_PW_Check">Confirm Password</string>
    <string name="PhoneNum">Phone</string>
    <string name="Next_Btn">Next</string>
    <string name="RegisterCard_Activity_title">님의 명함을 만들어주세요!</string>
    <string name="NecessaryPoint">(필수)</string>
    <string name="Pic_Face">얼굴 사진</string>
    <string name="Card_Username">이름(필수)</string>
    <string name="Card_email">이메일(필수)</string>
    <string name="Card_Phonenum">전화번호(필수)</string>
    <string name="Company_Name">회사명(필수)</string>
    <string name="Company_Address">주소(필수)</string>
    <string name="Occupation">직종(필수)</string>
    <string name="TeamName">팀이름(필수)</string>
    <string name="Position">직위(필수)</string>
    <string name="GroupName">그룹이름</string>
    <string name="Memo">메모</string>
    <string name="Complete">Complete</string>
    <string name="Choose_Later">나중에 만들게요</string>
    <string name="Business_Card">명함</string>
    <string name="Favorite">즐겨찾기</string>
    <string name="My_Card">내 명함</string>
    <string name="Setting">Setting</string>
    <string name="Notice">공지사항</string>
    <string name="Help">도움말</string>
    <string name="EditInfo">Change Password</string>
    <string name="EditInfo_origin">기존 비밀번호</string>
    <string name="EditInfo_new">New Password</string>
    <string name="Logout">Logout</string>
</resources>