<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/listFragment"
        android:icon="@drawable/ic_view_list_24"
        android:title="@string/Business_Card"
        android:enabled="true"/>

    <item android:id="@+id/rankingFragment"
        android:icon="@drawable/ic_star_24"
        android:title="@string/Favorite"
        android:enabled="true" />

    <item android:id="@+id/blank"
        android:title=""
        android:enabled="false"/>

    <item android:id="@+id/chatFragment"
        android:icon="@drawable/ic_person_24"
        android:title="@string/My_Card"
        android:enabled="true"/>

    <item android:id="@+id/moreFragment"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/Setting"
        android:enabled="true"/>
</menu>