<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".member.FoundIDActivity">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/brown"
        android:backgroundTint="@color/brown"
        android:id="@+id/tb_foundID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Found_ID"
            android:textColor="@color/black"
            android:textSize="20dp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:padding="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_guide_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/ID"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_foundID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/User_Email"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/brown"
            android:text="@string/Move_Login"/>

    </LinearLayout>

</LinearLayout>