<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MyCardFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:background="@color/brown"
        android:backgroundTint="@color/brown"
        android:id="@+id/tb_mycard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_PicCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/cardpic"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="#dcdcdc"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_weight="3">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/tv_cardname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/User_Name"
                        android:textColor="@color/black"
                        android:textSize="30dp" />
                    <TextView
                        android:id="@+id/tv_Position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/Position"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:paddingLeft="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="6dp">
                    <TextView
                        android:id="@+id/tv_Occupation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/Occupation"
                        android:textColor="@color/black"
                        android:textSize="17dp"/>
                    <View
                        android:layout_margin="5dp"
                        android:layout_width="2px"
                        android:layout_height="match_parent"
                        android:background="@color/black"/>
                    <TextView
                        android:id="@+id/tv_TeamName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/TeamName"
                        android:textColor="@color/black"
                        android:textSize="17dp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_Company_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/Company_Name"
                    android:textColor="@color/black"
                    android:layout_marginLeft="6dp"
                    android:textSize="17dp"/>
                <TextView
                    android:id="@+id/tv_GroupName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/GroupName"
                    android:textColor="@color/black"
                    android:layout_marginLeft="6dp"
                    android:textSize="17dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_PicFace"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/bica_portrait" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="#dcdcdc"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/baseline_call_24"/>
            <TextView
                android:id="@+id/tv_PhoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/PhoneNum"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="17dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="#dcdcdc"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/baseline_email_24"/>
            <TextView
                android:id="@+id/tv_User_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/User_Email"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="17dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="#dcdcdc"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/baseline_place_24"/>
            <TextView
                android:id="@+id/tv_Company_Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/Company_Address"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="17dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="#dcdcdc"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/baseline_note_alt_24"/>
            <TextView
                android:id="@+id/tv_Memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/Memo"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="17dp"/>

        </LinearLayout>

        </LinearLayout>
        </ScrollView>
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>